--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DB_USER=uapcnmnignmajtzo
 DB_PASSWORD=4lL057B0InHsi7yrKvPN
 DB_NAME=bhoonrvmpbgfumftgsqj
 JWT_SECRET = qwe1234
-USER_PASSWORD= yoqf mffw zhnq yats
-EMAIL = paccyhabi@gmail.com
+USER_PASS= yoqf mffw zhnq yats
+EMAIL_USER = paccyhabi@gmail.com
