--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST=bhoonrvmpbgfumftgsqj-mysql.services.clever-cloud.com
-DB_USER=uapcnmnignmajtzo
-DB_PASSWORD=4lL057B0InHsi7yrKvPN
-DB_NAME=bhoonrvmpbgfumftgsqj
-JWT_SECRET = qwe1234
+DB_HOST=bg2zic8ykisxndpl3f0t-mysql.services.clever-cloud.com
+DB_USER=uiwjxsa4vf8xianw
+DB_PASSWORD=VSBSUqNmS3PvIG3cz8dy
+DB_NAME=bg2zic8ykisxndpl3f0t
+JWT_SECRET = qwe1234TiK
 USER_PASS= yoqf mffw zhnq yats
 EMAIL_USER = paccyhabi@gmail.com
