--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-# DB_HOST=bg2zic8ykisxndpl3f0t-mysql.services.clever-cloud.com
-# DB_USER=uiwjxsa4vf8xianw
-# DB_PASSWORD=VSBSUqNmS3PvIG3cz8dy
-# DB_NAME=bg2zic8ykisxndpl3f0t
+DB_HOST=bg2zic8ykisxndpl3f0t-mysql.services.clever-cloud.com
+DB_USER=uiwjxsa4vf8xianw
+DB_PASSWORD=VSBSUqNmS3PvIG3cz8dy
+DB_NAME=bg2zic8ykisxndpl3f0t
 JWT_SECRET = qwe1234TiK
 USER_PASS= yoqf mffw zhnq yats
 EMAIL_USER = paccyhabi@gmail.com
 
-DB_HOST=localhost
-DB_USER= root
-DB_PASSWORD = ""
-DB_NAME = finance
+# DB_HOST=localhost
+# DB_USER= root
+# DB_PASSWORD = ""
+# DB_NAME = finance
