--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "email-existence": "^0.1.6",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "localtunnel": "^2.0.2",
